[package]
name = "parquet-wasm"
version = "0.0.1"
authors = ["Dominik Moritz <domoritz@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/domoritz/parquet-wasm"
description = "Apache Parquet in WebAssembly"
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# disable lz4 for now
parquet = { version = "3.0.0", features = ["arrow", "snap", "brotli", "flate2", "zstd", "base64"] }
wasm-bindgen = { version = "0.2" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# Smaller code size: https://rustwasm.github.io/book/reference/code-size.html
lto = true
